--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "browserslist": "^2.11.3",
+    "check": "^1.0.0",
+    "g": "^2.0.1",
     "gh-pages": "^3.2.3",
     "modern-normalize": "^1.1.0",
+    "npm": "^7.19.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
+    "updates": "^12.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -32,7 +37,6 @@
   "browserslist": {
     "production": [
       ">0.2%",
-      "not dead",
       "not op_mini all"
     ],
     "development": [
@@ -42,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "css-loader": "^0.28.7",
     "eslint": "^7.30.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.0.0",
